👷 Change trigger for fixing bug

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,11 @@
 name: deploy documentation
 
-on: [pull_request]
+on:
+    push:
+        branches:
+            - dev 
+    pull_request:
+        types: [opened]
 
 jobs:
     deploy-docs:
