:rocket: Fixed s3 upload error

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -51,9 +51,7 @@ jobs:
                 echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
                 echo "docker run -p 8080:8080 -e PROFILE=dev -d --name csbroker-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
                 zip -r deploy-$IMAGE_TAG.zip ./scripts appespec.yml
-
-            - name: s3 upload
-              run: aws s3 cp --region ap-northeast-2 --acl private ./deploy-$IMAGE_TAG.zip s3://cs-broker-bucket
+                aws s3 cp --region ap-northeast-2 --acl private ./deploy-$IMAGE_TAG.zip s3://cs-broker-bucket
 
 #            - name: code deploy
 #              run: |
