--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,10 +50,17 @@ jobs:
                 echo "aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $ECR_REGISTRY" >> scripts/deploy.sh
                 echo "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
                 echo "docker run -p 8080:8080 -e PROFILE=dev -d --name csbroker-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> scripts/deploy.sh
+
+            - name: upload to s3
+              env:
+                IMAGE_TAG: ${{ github.sha }}
+              run: |
                 zip -r deploy-$IMAGE_TAG.zip ./scripts appespec.yml
                 aws s3 cp --region ap-northeast-2 --acl private ./deploy-$IMAGE_TAG.zip s3://cs-broker-bucket
 
             - name: start deploy
+              env:
+                IMAGE_TAG: ${{ github.sha }}
               run: |
                 aws deploy create-deployment --application-name csbroker-dev-api-codedeploy \
                 --deployment-config-name CodeDeployDefault.OneAtATime \
