:green_heart: Update deploy docs trigger

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,9 +3,10 @@ name: deploy documentation
 on:
     push:
         branches:
-            - dev 
+            - dev
     pull_request:
-        types: [opened]
+        branches:
+            - 'feat/*'
 
 jobs:
     deploy-docs:
