--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -65,3 +65,13 @@ jobs:
                 --deployment-config-name CodeDeployDefault.OneAtATime \
                 --deployment-group-name csbroker-prod-api \
                 --s3-location bucket=cs-broker-bucket,bundleType=zip,key=deploy-$IMAGE_TAG.zip
+
+            - name: slack-notification
+              uses: 8398a7/action-slack@v3
+              with:
+                  status: ${{ job.status }}
+                  author_name: Github Action Test # default: 8398a7@action-slack
+                  fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+              env:
+                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+              if: always() # Pick up events even if the job fails or is canceled.
