feat : 배포 스크립트 최신화

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -4,7 +4,7 @@ on:
         branches:
             - main
 jobs:
-    build-docker:
+    deploy:
         runs-on: ubuntu-latest
         steps:
             - name: checkout
@@ -13,23 +13,14 @@ jobs:
                   token: ${{ secrets.PRIVATE_TOKEN }}
                   submodules: true
 
-            - name: Create SSH key
+            - name: Build and deploy
               run: |
-                mkdir -p ~/.ssh/
-                echo "$SSH_PRIVATE_KEY" > ../private.key
-                sudo chmod 600 ../private.key
-                echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-              shell: bash
+                sudo apt-get install sshpass
+                sshpass -p$SSH_PRIVATE_KEY ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_KNOWN_HOSTS '~/build.sh'
               env:
                 SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
-                SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
-
-            - name: Build and deploy
-              run: ssh -i $SSH_KEY_PATH $SSH_USER@$SSH_KNOWN_HOSTS '~/build.sh'
-              env:
                 SSH_USER: ${{secrets.SSH_USER}}
                 SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
-                SSH_KEY_PATH: ${{ github.workspace }}/../private.key
 
             - name: slack-notification
               uses: 8398a7/action-slack@v3
