chore : modify actions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,8 @@ name: deploy documentation
 
 on:
     push:
-        branches:
-            - dev
-            - 'feat/*'
+        branches-ignore:
+            - main
 
 jobs:
     deploy-docs:
