--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -15,7 +15,7 @@ jobs:
             - name: ktlint
               uses: ScaCap/action-ktlint@master
               with:
-                  github_token: ${{ secrets.PRIVATE_TOKEN }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
                   reporter: github-pr-review
                   android: false
                   fail_on_error: true
