--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,33 @@
 kotlin.code.style=official
+
+### Application version ###
+applicationVersion=0.0.1-SNAPSHOT
+
+### Project configs ###
+projectGroup=io.csbroker
+
+### Project depdency versions ###
+kotlinVersion=1.6.21
+javaVersion=11
+
+### Plugin depdency versions ###
+asciidoctorConvertVersion=3.3.2
+ktlintVersion=11.3.1
+
+### Spring dependency versions ###
+springBootVersion=2.7.1
+springDependencyManagementVersion=1.0.11.RELEASE
+springCloudDependenciesVersion=2021.0.3
+
+### External dependency versions ###
+queryDslVersion=5.0.0
+jwtVersion=0.11.2
+sonarQubeVersion=3.4.0.2513
+mockkVersion=1.13.4
+kotestVersion=5.5.5
+kotestExtensionsVersion=1.1.2
+awsSdkVersion=0.16.0
+sentryVersion=6.4.0
+okHttpVersion=4.10.0
+bucket4jVersion=0.2.0
+kotlinCoroutinesVersion=1.6.4
