--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,11 +15,11 @@ jobs:
                 token: ${{ secrets.PRIVATE_TOKEN }}
                 submodules: true
 
-            - name: setup jdk 17
+            - name: setup jdk 21
               uses: actions/setup-java@v2
               with:
-                distribution: 'adopt'
-                java-version: '17'
+                distribution: 'temurin'
+                java-version: '21'
                 cache: 'gradle'
 
             - name: Start Redis
