--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -12,11 +12,11 @@ jobs:
               with:
                   fetch-depth: 1
 
-            - name: setup jdk 17
+            - name: setup jdk 21
               uses: actions/setup-java@v2
               with:
-                  distribution: 'adopt'
-                  java-version: '17'
+                  distribution: 'temurin'
+                  java-version: '21'
                   cache: 'gradle'
 
             - name: add permission to gradlew
