--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -8,12 +8,12 @@ jobs:
 
         steps:
             - name: Clone repo
-              uses: actions/checkout@main
+              uses: actions/checkout@v3
               with:
                   fetch-depth: 1
 
             - name: setup jdk 21
-              uses: actions/setup-java@v2
+              uses: actions/setup-java@v3
               with:
                   distribution: 'temurin'
                   java-version: '21'
