fix : s3 업로드가 되지 않는 문제 수정

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,8 @@ sonarQubeVersion=3.4.0.2513
 mockkVersion=1.13.4
 kotestVersion=5.5.5
 kotestExtensionsVersion=1.1.2
-awsSdkVersion=0.16.0
+awsSdkVersion=1.0.13
 sentryVersion=6.4.0
-okHttpVersion=4.10.0
+okHttpVersion=5.0.0-alpha.11
 bucket4jVersion=0.2.0
 kotlinCoroutinesVersion=1.6.4
